radiobutton baru setengah

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,10 +17,10 @@
             android:label="@string/title_activity_relative_layout_sederhana" />
         <activity
             android:name=".LayoutTable"
-            android:label="@string/title_activity_layout_table"></activity>
+            android:label="@string/title_activity_layout_table" />
         <activity
             android:name=".GambarAndroid"
-            android:label="@string/title_activity_gambar_android"></activity>
+            android:label="@string/title_activity_gambar_android" />
         <activity
             android:name=".Home"
             android:label="@string/title_activity_home">
@@ -32,14 +32,25 @@
         </activity>
         <activity
             android:name=".AutocompleteSederhana"
-            android:label="@string/title_activity_autocomplete_sederhana">
-
-        </activity>
+            android:label="@string/title_activity_autocomplete_sederhana" />
         <activity
             android:name=".KotakDialog"
-            android:label="@string/title_activity_kotak_dialog">
-
-        </activity>
+            android:label="@string/title_activity_kotak_dialog" />
+        <activity
+            android:name=".CallActivity"
+            android:label="@string/title_activity_call" />
+        <activity
+            android:name=".CallActivity2"
+            android:label="@string/title_activity_call2" />
+        <activity
+            android:name=".Picker"
+            android:label="@string/title_activity_picker" />
+        <activity
+            android:name=".checkBox"
+            android:label="@string/title_activity_check_box" />
+        <activity
+            android:name=".RadioButton"
+            android:label="@string/title_activity_radio_button"></activity>
     </application>
 
 </manifest>
